# secret_santa

./: Cargo.toml  README.md
migrations/2023-01-01-173223_users/: up.sql
migrations/2023-01-02-085849_groups/: down.sql  up.sql
migrations/2023-01-02-094334_group_user/: down.sql  up.sql
src/: json_structs.rs  main.rs  models.rs  schema.rs  service.rs
src/json_structs/: group_json.rs
src/models/: group.rs  group_user.rs  user.rs
src/service/: database_connection.rs  group_service.rs  user_service.rs
