[package]
name = "secret_santa"
version = "0.1.0"
authors = [""]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
rand = "0.8.5"
